# simpleATM

./: CMakeLists.txt  README.md  main.cpp
include/: ATM.hpp  card.hpp
src/: ATM.cpp  card.cpp
